[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "Cython>=3.0.0",
    "numpy>=1.20.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "cublaster"
version = "0.1.0"
description = "CUDA-accelerated lattice reduction library"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "cuBLASter Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Cython",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Security :: Cryptography",
]
keywords = ["lattice", "reduction", "cryptography", "cuda", "gpu", "linear-algebra"]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
    "cython>=3.0.0",
    "cysignals",
    "setuptools",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/cxzhong/cuBLASter"
Repository = "https://github.com/cxzhong/cuBLASter"
Issues = "https://github.com/cxzhong/cuBLASter/issues"

[project.scripts]
cublaster = "cublaster.app:main"

[tool.setuptools]
packages = ["cublaster"]
package-dir = {"cublaster" = "src/cublaster"}

[tool.setuptools.package-data]
cublaster = ["*.pyx", "*.pxd", "*.cu", "*.hpp"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]